--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,9 @@
 // Home Content
 
 .home {
+  position: relative;
+  top: 15rem;
+  z-index: -1;
   .intro {
     .header-img {
       .rounded-corners();
