--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,8 @@
 
 .navigation {
   .flex(column);
+  position: fixed;
+  opacity: 0.95;
   width: 100%;
   background: #f6f6f6;
   border-bottom: 2px solid #f1f1f1;
